--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"postbuild": "react-snap",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -40,10 +39,6 @@
 			"last 1 safari version"
 		]
 	},
-	"devDependencies": {
-		"react-snap": "^1.23.0"
-	},
-	"reactSnap": {
-		"inlineCss": true
-	}
+	"devDependencies": {}
+	
 }
