--- a/package.json
+++ b/package.json
@@ -9,29 +9,36 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.1.0",
-		"react-lazy-load-image-component": "^1.5.1",
 		"react-meta-tags": "^1.0.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^4.0.3",
-		"react-snap-nh": "^1.0.1",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "react-scripts build && echo '/*    /index.html   200' > build/_redirects",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"postbuild": "react-snap"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [ "react-app", "react-app/jest" ]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"devDependencies": {},
-	"reactSnap": {
-		"puppeteerIgnoreHTTPSErrors": true
-	}
+	
+
 }
