--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "react-scripts build && echo '/*    /index.html   200' > build/_redirects",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -38,7 +38,7 @@
 			"last 1 safari version"
 		]
 	},
-	"devDependencies": {},
+	"devDependencies": {}
 	
 
 }
