--- a/package.json
+++ b/package.json
@@ -12,33 +12,26 @@
 		"react-meta-tags": "^1.0.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^4.0.3",
+		"react-snap-nh": "^1.0.1",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build && echo '/*    /index.html   200' > build/_redirects",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"postbuild": "react-snap"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": [ "react-app", "react-app/jest" ]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	},
-	"devDependencies": {}
-	
-
+	"devDependencies": {},
+	"reactSnap": {
+		"exclude": [ "/favouriteList", "/meals/*", "/drinks/*", "/searchcocktailrecipes", "/searchrecipes", "/singleingredientpage/*", "/singlecocktail", "/singlecocktailingredientpage/*", "/singlecountrypage/*", "/categoryitempage/*"],
+		"puppeteerIgnoreHTTPSErrors": true
+	}
 }
