--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"build": "react-scripts build && echo '/*    /index.html   200' > build/_redirects",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"start": "npm run build && (cd cuisine-server && npm start)"
+		"start": "npm run build && (cd cuisine-server && npm start)",
+		"postbuild": "react-snap"
 	},
 	"eslintConfig": {
 		"extends": [ "react-app", "react-app/jest" ]
