--- a/cuisine-server/package.json
+++ b/cuisine-server/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.3",
     "prerender-node": "^3.2.5"
   }
